@@ -182,6 +182,8 @@ $Mj::Config::default_string = q(
  'set_policy'           => "open+confirm",
  'signature_separator'  => '/^[-_]/',
  'site_name'            => $subs->{'site_name'},
+ 'subject_re_pattern'   => '/(?:(?:re|sv|aw|antwort|re\^\d+|re\[\d+\]):\s*)+/i',
+ 'subject_re_strip'     => 1,
  'subject_prefix'       => '[$LIST]',
  'sublists'             => [],
  'subscribe_policy'     => "open+confirm",
